--- a/HTML/blogs.html
+++ b/HTML/blogs.html
@@ -78,7 +78,8 @@
     Footer
   -->
   <footer>
-    <img class="blog_footer_image" src="../Images/logo-white 1.png">
+    <img class="blog_footer_image" src="../Images/logo-white 1.png"
+    alt="Bigger blog site logo for footer">
     <h1 class="blog_title">Drop by Drop</h1>
     <div class="footer_logos">
       <i class="fa-brands fa-facebook fa-2xl"></i>
