--- a/HTML/specific.html
+++ b/HTML/specific.html
@@ -64,7 +64,7 @@
     <!-- Small image modal -->
     <div class="modal">
       <span class="modal_close">&times;</span>
-      <img class="modal_image">
+      <img class="modal_image" alt="Modal for side image">
     </div>
 
     <!-- Comment section -->
@@ -84,7 +84,7 @@
         placeholder="Comment..."
         required></textarea>
       
-        <button class="comment_button" type="submit">Submit</button>
+        <button class="comment_button" type="reset">Submit</button>
       </form>
 
       <ul class="comment_posts"></ul>
@@ -102,7 +102,8 @@
     Footer
   -->
   <footer>
-    <img class="specific_footer_image" src="../Images/logo-white 1.png">
+    <img class="specific_footer_image" src="../Images/logo-white 1.png"
+    alt="Bigger blog site logo for footer">
     <h1 class="specific_title">Drop by Drop</h1>
     <div class="footer_logos">
       <i class="fa-brands fa-facebook fa-2xl"></i>
