--- a/HTML/subject.html
+++ b/HTML/subject.html
@@ -84,7 +84,8 @@
             That's why freshwater and saltwater fish will never meet. To further analyse this, There is a divide phenomenon in the certain areas known as the halocline, a paper thin layer perfectly seperating the two aquatic worlds apart.
           </p>
         </div>
-        <img class="info_image" src="../Images/subject_picture1.png">
+        <img class="info_image" src="../Images/subject_picture1.png"
+        alt="First image for science">
       </div>
 
       <div class="info" id="info_2">
@@ -105,7 +106,8 @@
             Limnology - the scientific study of freshwater systems, including lakes, rivers, wetlands, and groundwater.
           </p>
         </div>
-        <img class="info_image" src="../Images/subject_picture3.png">
+        <img class="info_image" src="../Images/subject_picture3.png"
+        alt="Second image for science">
       </div>
 
       <div class="info" id="info_3">
@@ -124,7 +126,8 @@
             In their labs, the cosmic rocks are broken down to their components. Is it possible that not only water, but also the building blocks of life came to us from outer space?
           </p>
         </div>
-        <img class="info_image" src="../Images/subject_picture2.png">
+        <img class="info_image" src="../Images/subject_picture2.png"
+        alt="Third image for science">
       </div>
     </div>
   </main>
@@ -133,7 +136,8 @@
     Footer
   -->
   <footer>
-    <img class="subject_footer_image" src="../Images/logo-white 1.png">
+    <img class="subject_footer_image" src="../Images/logo-white 1.png"
+    alt="Bigger blog site logo for footer">
     <h1 class="subject_title">Drop by Drop</h1>
     <div class="footer_logos">
       <i class="fa-brands fa-facebook fa-2xl"></i>
