--- a/HTML/usage.html
+++ b/HTML/usage.html
@@ -89,7 +89,8 @@
             environmentally-friendly option.
           </p>
         </div>
-        <img class="info_image" src="../Images/hydro_power.png">
+        <img class="info_image" src="../Images/hydro_power.png"
+        alt="First image for hydropower">
       </div>
 
       <div class="info" id="info_2">
@@ -106,7 +107,8 @@
             Wave power captures the energy of ocean waves and converts it into electricity. Various technologies, such as floating devices or underwater oscillating water columns, are used to harness the wave energy and drive generators. Wave power has the potential to provide a significant source of renewable energy.
           </p>
         </div>
-        <img class="info_image" src="../Images/tidal_power.png">
+        <img class="info_image" src="../Images/tidal_power.png"
+        alt="Second image for hydropower">
       </div>
 
       <div class="info" id="info_3">
@@ -121,7 +123,8 @@
             Reservoirs also help mitigate the risk of flooding by capturing excess water during heavy rainfall events. By regulating the release of stored water, reservoirs can control downstream flows, reducing the likelihood of downstream flooding and associated damages to infrastructure and communities.
           </p>
         </div>
-        <img class="info_image" src="../Images/reservoir.png">
+        <img class="info_image" src="../Images/reservoir.png"
+        alt="Third image for hydropower">
       </div>
     </div>
   </main>
@@ -130,7 +133,8 @@
     Footer
   -->
   <footer>
-    <img class="subject_footer_image" src="../Images/logo-white 1.png">
+    <img class="subject_footer_image" src="../Images/logo-white 1.png"
+    alt="Bigger blog site logo for footer">
     <h1 class="subject_title">Drop by Drop</h1>
     <div class="footer_logos">
       <i class="fa-brands fa-facebook fa-2xl"></i>
