--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
     Footer: at the bottom of every page
   -->
   <footer>
-    <img class="home_footer_image" src="Images/logo-white 1.png">
+    <img class="home_footer_image" src="Images/logo-white 1.png"
+    alt="Bigger blog site logo for footer">
     <h1 class="home_title">Drop by Drop</h1>
     <div class="footer_logos">
       <i class="fa-brands fa-facebook fa-2xl"></i>
