--- a/HTML/about.html
+++ b/HTML/about.html
@@ -87,7 +87,8 @@
       </div>
 
       <div class="goal_image">
-        <img class="goal_intro_image" src="../Images/about_image.png">
+        <img class="goal_intro_image" src="../Images/about_image.png"
+        alt="Introduction image for About us">
       </div>
 
     </div>
@@ -105,17 +106,20 @@
 
       <div class="subjects">
         <a class="subject" href="../HTML/usage.html">
-          <img class="subject_image" src="../Images/subject_image_1.png">
+          <img class="subject_image" src="../Images/subject_image_1.png"
+          alt="Image for water usage">
           <h3 class="subject_title">Water usage</h3>
         </a>
 
         <a class="subject" href="../HTML/subject.html">
-          <img class="subject_image" src="../Images/subject_image_2.png">
+          <img class="subject_image" src="../Images/subject_image_2.png"
+          alt="Image for science">
           <h3 class="subject_title">Science</h3>
         </a>
 
         <a class="subject" href="../HTML/climate.html">
-          <img class="subject_image" src="../Images/subject_image_3.png">
+          <img class="subject_image" src="../Images/subject_image_3.png"
+          alt="Image for climate change">
           <h3 class="subject_title">Climate change</h3>
         </a>
 
@@ -130,7 +134,8 @@
     Footer
   -->
   <footer>
-    <img class="about_footer_image" src="../Images/logo-white 1.png">
+    <img class="about_footer_image" src="../Images/logo-white 1.png"
+    alt="Bigger blog site logo for footer">
     <h1 class="about_title">Drop by Drop</h1>
     <div class="footer_logos">
       <i class="fa-brands fa-facebook fa-2xl"></i>
