--- a/HTML/climate.html
+++ b/HTML/climate.html
@@ -85,7 +85,8 @@
             seals. Without much terrain, some species migh even go extinct.
           </p>
         </div>
-        <img class="info_image" src="../Images/sea_levels.png">
+        <img class="info_image" src="../Images/sea_levels.png"
+        alt="First image for climate change">
       </div>
 
       <div class="info" id="info_2">
@@ -107,7 +108,8 @@
             efforts against globale warming cannot afford to dwindle.
           </p>
         </div>
-        <img class="info_image" src="../Images/drought.png">
+        <img class="info_image" src="../Images/drought.png"
+        alt="Second image for climate change">
       </div>
 
       <div class="info" id="info_3">
@@ -129,7 +131,8 @@
             lack of ice, reduction in snow accumulation and unpredictable weather.
           </p>
         </div>
-        <img class="info_image" src="../Images/glaciers.png">
+        <img class="info_image" src="../Images/glaciers.png"
+        alt="Third image for climate change">
       </div>
     </div>
   </main>
@@ -138,7 +141,8 @@
     Footer
   -->
   <footer>
-    <img class="subject_footer_image" src="../Images/logo-white 1.png">
+    <img class="subject_footer_image" src="../Images/logo-white 1.png"
+    alt="Bigger blog site logo for footer">
     <h1 class="subject_title">Drop by Drop</h1>
     <div class="footer_logos">
       <i class="fa-brands fa-facebook fa-2xl"></i>
