--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -120,7 +120,8 @@
     Footer
   -->
   <footer>
-    <img class="contact_footer_image" src="../Images/logo-white 1.png">
+    <img class="contact_footer_image" src="../Images/logo-white 1.png"
+    alt="Bigger blog site logo for footer">
     <h1 class="contact_title">Drop by Drop</h1>
     <div class="footer_logos">
       <i class="fa-brands fa-facebook fa-2xl"></i>
