--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-  content="how to make contact">
+  content="page where contact info is sent via form">
   <title>Contact us page</title>
 
   <script src="https://kit.fontawesome.com/26fd6b155e.js" crossorigin="anonymous"></script>
